update subscription not found case

--- a/popup/manage.html
+++ b/popup/manage.html
@@ -16,8 +16,9 @@
 </header>
 <body>
   <div class="container">
-    <h2 style="margin-top: 50px;">Manage subscriptions</h2>
+    <h2 style="margin-top: 50px;" id="subscriptions-heading">Manage subscriptions</h2>
     <div id="subscriptions" class="subscription-container"></div>
+    <div id="no-cards" style="font-size: 24px; margin-top: 20px;"></div>
   </div>
 
   <script src="popup.js"></script>
