update header | add logo

--- a/popup/chart.html
+++ b/popup/chart.html
@@ -2,7 +2,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 <link rel="stylesheet" href="popup.css">
 <body>
-    <header>
+    <header class="header">
+        <a href="popup.html">
+            <img class="header-logo" alt="logo" style="height: 40px; margin-left: 10px;" src="logo-dark.png">
+        </a>        
         <div class="toggle-container">
             <input type="checkbox" id="mode-toggle" class="toggle">
             <label for="mode-toggle" class="slider"></label>
