--- a/popup/forgot-password.html
+++ b/popup/forgot-password.html
@@ -10,7 +10,9 @@
 
 <body>
     <header class="header">
-        <a href="popup.html">subhub</a>
+        <a href="popup.html">
+            <img class="header-logo" alt="logo" style="height: 40px; margin-left: 10px;" src="logo-dark.png">
+        </a>        
         <div class="toggle-container">
             <input type="checkbox" id="mode-toggle" class="toggle">
             <label for="mode-toggle" class="slider"></label>
