--- a/popup/manage.html
+++ b/popup/manage.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="popup.css">
 </head>
 <header class="header" style="height: 20px;">
-    <a href="popup.html">subhub</a>
+    <a href="popup.html">
+        <img class="header-logo" alt="logo" style="height: 40px; margin-left: 10px;" src="logo-dark.png">
+    </a>    
     <a href="./chart.html" style="text-decoration: none; color: white;"><p style="margin-left: -50px; cursor: pointer;">your spends</p></a>
     <div class="toggle-container">
         <input type="checkbox" id="mode-toggle" class="toggle">
