--- a/popup/manage.html
+++ b/popup/manage.html
@@ -23,6 +23,12 @@
         <div id="subscriptions" class="subscription-container"></div>
         <div id="no-cards" style="font-size: 24px; margin-top: 20px;"></div>
     </div>
+    <div class="align-btn">
+        <a href="create-new-sub.html">
+            <button id="add-subscription" class="add-subscription">Add Subscription</button>
+        </a>
+    </div>
+    
 
     <script>
         // Retrieve the username from sessionStorage
