handle images | add url field

--- a/popup/create-new-sub.html
+++ b/popup/create-new-sub.html
@@ -11,6 +11,9 @@
 <form id="subscription-form">
     <label for="name">Name:</label><br>
     <input type="text" id="name" name="name"><br>
+
+    <label for="url">URL:</label><br>
+    <input type="text" id="url" name="url"><br>
     
     <label for="settings_url">Settings URL:</label><br>
     <input type="text" id="settings_url" name="settings_url"><br>
