--- a/popup/create-new-sub.html
+++ b/popup/create-new-sub.html
@@ -22,6 +22,7 @@
     <select id="plan" name="plan">
         <option value="weekly">Weekly</option>
         <option value="biweekly">Biweekly</option>
+        <option value="monthly">Monthly</option>
         <option value="quaterly">Quaterly</option>
         <option value="half-yearly">Half-Yearly</option>
         <option value="yearly">Yearly</option>
