handle dropdown | add monthly field

--- a/popup/update.html
+++ b/popup/update.html
@@ -25,6 +25,7 @@
             <select id="update-plan" class="update-plan">
                 <option value="weekly">Weekly</option>
                 <option value="biweekly">Biweekly</option>
+                <option value="montly">Monthly</option>
                 <option value="quaterly">Quaterly</option>
                 <option value="half-yearly">Half-Yearly</option>
                 <option value="yearly">Yearly</option>
