--- a/popup/manage.html
+++ b/popup/manage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>subhub - manage subscriptions</title>
+    <title>subscape - manage subscriptions</title>
     <link rel="stylesheet" href="popup.css">
 </head>
 <header class="header" style="height: 20px;">
